# msg-store

./: Cargo.toml  README.md  build.rs
proto/: store.proto
src/: main.rs  service.rs
