[package]
name = "msg-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
chrono = { version = "0.4.31", features = ["serde"] }
once_cell = "1.19.0"
prost = "0.12.3"
regex = "1.10.2"
tokio = { version = "1.35.1", features = ["test-util", "macros", "rt-multi-thread"] }
tonic = "0.10.2"

[build-dependencies]
tonic-build = "0.10.2"
